db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: mariadb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        type: db
      containers:
      - image: wonjong9504/db:v3.2
        name: mariadb
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: 200Mi
            cpu: 200m
          limits:
            memory: 200Mi
            cpu: 200m
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 1
          successThreshold: 1           
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
        volumeMounts:
        - name: db-storage
          mountPath: /mnt/data/db
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: pvc-db
