web-main-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deploy
  annotations:
    kubernetes.io/change-cause: web-main:v2.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: web-main
  template:
    metadata:
      labels:
        app: web-main
    spec:
      nodeSelector:
        type: web
      containers:
      - image: wonjong9504/main:v10.2
        name: web
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 250m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 2
        volumeMounts:
        - name: web-main-storage
          mountPath: /mnt/data/web-main
      volumes:
      - name: web-main-storage
        persistentVolumeClaim:
          claimName: pvc-web-main
