web-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30100
  selector:
    app: web-main
