ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: svc-main
      port:
        number: 80
  rules:
  - host: yas24.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-main
            port:
              number: 80
